Issues now being posted.
This step is easy, but requires a specific YML file format.
I am starting to think text parsing might be the best input
method for the instructors benefit.

Up next: Adding labelsthe issues.

--- a/test/support/test_stories.yml
+++ b/test/support/test_stories.yml
@@ -1,7 +1,20 @@
 repositoryName: https://github.com/AllPurposeName/test-stories
 stories:
-  Title: Visitor can view items
-  Background: I have several items and each of them has a title, description, price, and image
-  Body: As a visitor
-    When I visit "/items"
-    I can see all existing items
+  issueOne:
+    title: Visitor can view items
+    body: >
+      Background: I have several items and each of them has a title, description, price, and image
+
+
+      As a visitor
+
+      When I visit "/items"
+
+      I can see all existing items
+  issueTwo:
+    title: Create Wireframes for Most Important Views
+    body: Think about what you think the workflow should be on the site. Which of those views is most important?
+
+      In addition to the home page wireframe, create wireframes for the next two most important pages.
+
+      Examples might be A users' profile page, a product page, an admin dashboard etc...
